--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <script src="js/three.js"></script>
-        <script src="js/vue.js"></script>
-        <script src="js/beatdetection.js"></script>
-        <script src="js/perlin.js"></script>
+        <script src="js/Three.js"></script>
+        <script src="js/Vue.js"></script>
+        <script src="js/BeatDetection.js"></script>
+        <script src="js/Perlin.js"></script>
         <script src="js/script.js"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
